@@ -12,7 +12,7 @@
     <td width="21"> <h1></h1></td>
     <td width="885"> <font face="Verdana, Arial, Helvetica, sans-serif"><b><font size="6">The 
       File Position</font></b></font></td>
-    <td width="96"><a href="http://spirit.sf.net"><img src="theme/wave.gif" width="93" height="68" align="right" border="0"></a></td>
+    <td width="96"><a href="http://www.boost.org"><img src="theme/wave.gif" width="93" height="68" align="right" border="0"></a></td>
   </tr>
 </table>
 <br>
@@ -112,8 +112,8 @@
 <p class="copyright">Copyright &copy; 2003-2005 Hartmut Kaiser<br>
   <br>
   <font size="2">Distributed under the Boost Software License, Version 1.0. (See accompanying file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt) </font> </p>
-<span class="updated"></span><!-- #BeginDate format:fcAm1m -->Thursday, May 12, 2005  9:19<!-- #EndDate -->e format:fcAm1m -->Thursday, May 12, 2005  9:14<!-- #EndDate -->
+<span class="updated"></span><!-- #BeginDate format:fcAm1m -->Sunday, May 15, 2005  12:23<!-- #EndDate -->e format:fcAm1m -->Thursday, May 12, 2005  9:14<!-- #EndDate -->
 </span></p>
 </body>
 </html>
-<!-- #BeginDate format:fcAm1m -->Thursday, May 12, 2005  9:19<!-- #EndDate -->
+<!-- #BeginDate format:fcAm1m -->Sunday, May 15, 2005  12:23<!-- #EndDate -->
